<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/work"
            app:actionLayout="@layout/item_menu"
            android:title="@string/menu_work" />
        <item
            android:id="@+id/announcement"
            app:actionLayout="@layout/item_menu"
            android:title="@string/menu_announcement" />
        <item
            android:id="@+id/personal"
            app:actionLayout="@layout/item_menu"
            android:title="@string/menu_personal" />

        <item
            android:id="@+id/pay"
            app:actionLayout="@layout/item_menu"
            android:title="@string/menu_pay" />

        <item
            android:id="@+id/logout"
            app:actionLayout="@layout/item_menu"
            android:title="@string/menu_logout" />

        <item
            android:id="@+id/withdrawal"
            app:actionLayout="@layout/item_menu"
            android:title="@string/menu_withdrawal" />
    </group>
</menu>