<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_filter_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/filter_title"
        android:textColor="@color/main_purple"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/ns_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_filter_title">

        <RadioGroup
            android:id="@+id/rg_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp">

            <RadioButton
                android:id="@+id/rb_filter_all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_all" />

            <RadioButton
                android:id="@+id/rb_filter_ongoing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_ongoing" />

            <RadioButton
                android:id="@+id/rb_filter_red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_red" />

            <RadioButton
                android:id="@+id/rb_filter_yellow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_yellow" />

            <RadioButton
                android:id="@+id/rb_filter_green"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_green" />

            <RadioButton
                android:id="@+id/rb_filter_blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_blue" />

            <RadioButton
                android:id="@+id/rb_filter_black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_black" />
        </RadioGroup>
    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_filter_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/selector_btn"
        android:enabled="false"
        android:text="@string/dialog_confirm"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ns_filter" />
</androidx.constraintlayout.widget.ConstraintLayout>