<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_barcode_error_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/error_title"
        android:textColor="@color/main_purple"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_barcode_error_message1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/error_message1"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@+id/tv_barcode_error_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_barcode_error_title" />

    <TextView
        android:id="@+id/tv_barcode_error_message2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/error_message2"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/tv_barcode_error_message1"
        app:layout_constraintTop_toBottomOf="@+id/tv_barcode_error_message1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_barcode_error_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/selector_btn"
        android:text="@string/dialog_confirm"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_barcode_error_message2" />
</androidx.constraintlayout.widget.ConstraintLayout>