<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.das.CountErrorActivity">

    <TextView
        android:id="@+id/tv_count_error_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/das_title"
        android:background="@color/main_purple"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:gravity="center"
        android:paddingTop="24dp"
        android:paddingBottom="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_count_error_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/tv_count_error_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_count_error_title"
        app:srcCompat="@drawable/ic_back" />

    <ImageView
        android:id="@+id/iv_count_error_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_count_error_title"
        app:layout_constraintEnd_toEndOf="@+id/tv_count_error_title"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_menu" />

    <ImageView
        android:id="@+id/iv_count_error_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:paddingStart="4dp"
        android:paddingTop="4dp"
        android:paddingEnd="4dp"
        android:paddingBottom="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_count_error_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_count_error_title"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_question" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_count_transmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/das_count_btn"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:background="@drawable/btn_active"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/iv_count_error"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_count_error_part"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_count_error_title"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_count_error_part"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/das_count_part"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_count_error_item"
        app:layout_constraintStart_toStartOf="@+id/tv_count_error_item" />

    <TextView
        android:id="@+id/tv_count_error_item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="140dp"
        android:text="@string/das_count_item"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_count_transmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_count_error_des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/das_count_des"
        android:textColor="@color/dark_red"
        app:layout_constraintBottom_toTopOf="@+id/btn_count_transmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_count_error"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/selector_line"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/das_count_number"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:inputType="number"
        android:padding="4dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_count_error_des"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_count_error_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/das_count_unit"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/et_count_error"
        app:layout_constraintStart_toEndOf="@+id/et_count_error"
        app:layout_constraintTop_toTopOf="@+id/et_count_error" />

</androidx.constraintlayout.widget.ConstraintLayout>