<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.MainActivity">

    <TextView
        android:id="@+id/tv_main_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/main_title"
        android:background="@color/main_purple"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:gravity="center"
        android:paddingTop="24dp"
        android:paddingBottom="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_main_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_main_title"
        app:layout_constraintEnd_toEndOf="@+id/tv_main_title"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_menu" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="24dp"
        android:text="@string/login_title"
        android:textColor="@color/main_purple"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/et_user_number"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_user_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="72dp"
        android:background="@drawable/selector_line"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/black"
        android:padding="4dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_main_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_main_title" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_main_start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login_btn"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:background="@drawable/selector_btn"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>